# signialib

./: .gitignore  .prospector.yml  README.md  _tasks.py  dodo.py  pyproject.toml
.github/workflows/: publish.yml  test-and-lint.yml
signialib/: __init__.py  _session_base.py  dataset.py  header.py  session.py
tests/: test_matlab_importer.py  test_preprocessing.py  test_signialib.py  test_txt_importer.py
tests/test_data/: mat_left_data_resampled50.csv
tests/test_data/txt_file/: 03-04-2023_11-03-21_BMA400_WalkingLabel.txt  04-01-2024_noWalking_includingAppVersionAndDummyFirmversion.txt  07-03-2023_18-29-52_test_BMA400.txt  08-03-2023_11-12-02_test_25Hz.txt  08-03-2023_11-12-51_testWithLabels.txt  08-03-2023_11-12-51_testWithLabels_2.0.txt
