[tool.poetry]
name = "signialib"
version = "1.0.1"
description = "Data handling of the IMUs integrated into Signia hearing aids"
authors = ["Ann-Kristin Seifer <ann-kristin.seifer@fau.de>", 
        "Arne Küderle <arne.kuederle@fau.de>",
        "Nils Roth <nils.roth@fau.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1"
scipy = ">=1.6.1,<2.0.0"
numpy = ">=1"
joblib = "^1.0.0"
nilspodlib = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.8.1"
prospector = "^1.3.0"
black = "^22.3.0"
coverage = "^6.3.2"
memory_profiler = "^0.57.0"
toml = "^0.10.1"
mypy = "^0.790"
isort = "^5.10.1"



[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_format_black = "black ."
_format_isort = "isort ."
format = ["_format_black", "_format_isort"]
lint = { cmd = "prospector", help = "Lint all files with Prospector." }
_check_black = "black . --check"
_check_isort = "isort . --check"
check = { sequence = ["_check_black", "_check_isort", "lint"], help = "Check all potential format and linting issues.", ignore_fail = false }
test = { cmd = "pytest --cov=signialib --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
bump_version = { "script" = "_tasks:task_update_version()" }


[tool.pyright]
pythonVersion = "3.8"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"